[tool.poetry]
name = "nlp100"
version = "0.1.0"
description = ""
authors = ["shinchu <cougousei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter_nbextensions_configurator = "^0.4.1"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter = "^1.0.0"
jupyterlab = "^2.1.4"
jupyterthemes = "^0.20.0"
pandas = "^1.0.5"
mecab-python3 = "^1.0.0"

[tool.poetry.dev-dependencies]
ptpython = "^3.0.2"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
