[tool.poetry]
name = "nlp100"
version = "0.1.0"
description = ""
authors = ["shinchu <cougousei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter_nbextensions_configurator = "^0.4.1"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter = "^1.0.0"
jupyterlab = "^2.1.4"
jupyterthemes = "^0.20.0"
pandas = "^1.0.5"
mecab-python3 = "^1.0.0"
scikit-learn = "^0.23.2"
nltk = "^3.5"
spacy = "^2.3.2"
gensim = "^3.8.3"
seaborn = "^0.11.0"
torch = {url = "https://download.pytorch.org/whl/cu110/torch-1.7.0%2Bcu110-cp38-cp38-linux_x86_64.whl"}
# torchvision = {url = "https://download.pytorch.org/whl/cu110/torchvision-0.8.1%2Bcu110-cp38-cp38-linux_x86_64.whl"}

transformers = "^3.4.0"
[tool.poetry.dev-dependencies]
ptpython = "^3.0.2"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
